@@ -15,7 +15,7 @@ INCLUDES = @INCLUDES@ -I$(top_builddir) -I$(top_srcdir)/lib
 LIBS = @LIBS@ @LIBINTL@
 
 COMMON = global.h conf.h conf.C util.h util.C device.h device.C \
-         slog.h slog.C
+         slog.h slog.C netcompat.h
 
 vped_SOURCES = vped.C hash_map.h vpn.h vpn.C vpn_tcp.C sockinfo.h sockinfo.C \
                lzf/lzf.h lzf/lzfP.h lzf/lzf_c.c lzf/lzf_d.c iom.h iom.C \
