@@ -29,12 +29,10 @@
 #include <sys/wait.h>
 #include <unistd.h>
 #include <time.h>
-#include <sys/socket.h>
-#include <netinet/in.h>
-#include <arpa/inet.h>
-
 
 #include <sys/mman.h>
+
+#include "netcompat.h"
 
 #include "gettext.h"
 #include "pidfile.h"
